--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,8 +1,7 @@
 {# Navigation (Private) #}
 <div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-mini lg:grid-cols-maxi top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
   <div class="grid pt-4 pb-12 bg-white col-full grid-cols-mini lg:grid-cols-maxi">
-
-    <div class="grid gap-x-12 gap-y-12 col-wide bg-white md:grid-flow-col-dense md:grid-cols-5 md:grid-rows-[1fr_auto]">
+    <div class="grid gap-x-12 gap-y-12 col-wide md:grid-flow-col-dense md:grid-cols-5 md:grid-rows-[1fr_auto]">
 
       {# Områder #}
       <div class="flex-1 row-start-1 md:pr-4 md:col-span-2 md:row-span-2">
@@ -23,8 +22,22 @@
         </ul>
       </div>
 
+
+      {# Søk #}
+      <form class="w-full col-start-1 gap-2 md:max-w-2xl md:col-span-4 md:row-start-1 md:pr-20">
+        <label class="text-sm tracking-widest uppercase opacity-80" for="search">Søk</label>
+        <div class="flex mt-2">
+          <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
+          <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-xl text-white bg-blue-500 rounded-r fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit">
+            <svg class="w-5 h-5" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z" /></svg>
+            <span class="sr-only">Søk</span>
+          </button>
+        </div>
+      </form>
+
+
       {# Snarveier #}
-      <div class="flex flex-col md:row-start-1 md:col-span-3">
+      <div class="flex flex-col md:row-start-2 md:col-span-3">
         <h3 class="text-sm tracking-widest uppercase opacity-80">{{ menu.shortcuts.title | safe }}</h3>
         <ul class="mt-1 xs:columns-2">
           {%- for link in menu.shortcuts.linkList -%}
@@ -40,19 +53,7 @@
         </ul>
       </div>
 
-      {# Søk #}
-      <form class="w-full col-start-1 gap-2 md:max-w-4xl md:col-span-4 md:row-start-2 md:pr-20">
-        <label class="text-sm tracking-widest uppercase opacity-80" for="search">Søk</label>
-        <div class="flex mt-2">
-          <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
-          <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-xl text-white bg-blue-500 rounded-r fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit">
-            <svg class="w-5 h-5" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z" /></svg>
-            <span class="sr-only">Søk</span>
-          </button>
-        </div>
-      </form>
 
     </div>
-
   </div>
 </div>
