--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,4 +1,4 @@
-<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="flex flex-row min-h-screen font-mono text-white bg-black px-xs-2xl">
+<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="flex flex-row min-h-screen font-mono text-white bg-black px-edge">
   <div class="w-full mx-auto mt-auto max-w-wide pb-2xl">
     <h2 class="text-sm font-semibold tracking-widest text-gray-300 uppercase col-wide">Sider i prototypen</h2>
     <ul class="mt-4 col-wide md:text-lg">
