--- a/src/dekorator.njk
+++ b/src/dekorator.njk
@@ -7,6 +7,6 @@ permalink: false
 {% extends "blank.njk" %}
 
 {% block content %}
-  {% include "partials/header-new.njk" %}
+  {% include "partials/header.njk" %}
 {% endblock %}
 
