--- a/src/index.njk
+++ b/src/index.njk
@@ -6,8 +6,8 @@ noJS: true
 {%- extends 'blank.njk' -%}
 
 {%- block content -%}
-<div class="grid text-xl p-sm-3xl gap-xs-sm">
-  {# <a class="bg-gray-200 rounded py-sm px-md aspect-video" href="forside/">Forside (personbruker)</a> #}
-  <a class="text-white bg-blue-500 hover:bg-blue-700 rounded-xl p-md" href="produkt/">Produktsidemal</a>
+<div class="grid gap-3 text-xl p-sm-3xl">
+  {# <a class="bg-gray-200 rounded py-4 px-md aspect-video" href="forside/">Forside (personbruker)</a> #}
+  <a class="p-8 text-white bg-blue-500 hover:bg-blue-700 rounded-xl" href="produkt/">Produktsidemal</a>
 </div>
 {% endblock %}
