--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="pb-12 text-white px-xs-2xl bg-deepblue-800" x-bind:inert="menuOpen || notifyOpen">
+<footer class="pb-12 text-white px-edge bg-deepblue-800" x-bind:inert="menuOpen || notifyOpen">
   <div class="mx-auto max-w-wide">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
