--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -1,6 +1,6 @@
 {# Notifications #}
 <div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-mini lg:grid-cols-maxi top-full" x-bind:class="notifyOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
-  <div class="lg:max-w-xl w-full bg-white rounded-b-lg shadow-xl md:max-h-[92vh] col-full sm:col-wide lg:justify-self-end sm:-mx-6">
+  <div class="lg:max-w-xl w-full bg-white rounded-b-lg shadow-16 md:max-h-[92vh] col-full sm:col-wide lg:justify-self-end sm:-mx-6">
     <div class="px-6 px-clamp-gap">
       <p class="grid pt-5 pb-4" x-on:click="newNotifications = !newNotifications">
         <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
@@ -19,7 +19,7 @@
         <h2 class="text-lg font-semibold">Varsler</h2>
         <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
         <div class="grid gap-1 mt-2">
-          {%- for task in notifications.myTasks -%}
+          {%- for task in minSide.myTasks -%}
             <a class="grid gap-1 px-3.5 py-3 bg-white rounded-lg fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
               <h3 class="font-semibold leading-snug">{{ task.title | safe }}</h3>
               <p class="text-sm opacity-80">{{ task.timestamp }}</p>
@@ -40,7 +40,7 @@
 
         <h3 class="mt-6 text-sm tracking-wider uppercase opacity-80">Beskjeder</h3>
         <div class="grid gap-1 mt-2">
-          {%- for message in notifications.myMessages -%}
+          {%- for message in minSide.myMessages -%}
             <a class="px-3.5 py-3 bg-white rounded-md fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
               <div>
                 <h3 class="font-semibold leading-snug">{{ message.title | safe }}</h3>
