--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -17,29 +17,28 @@ alpine: true
 
 {%- block content -%}
 
-  <main class="grid grid-cols-mini lg:grid-cols-maxi py-lg">
-
+  <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
     <div class="col-wide">
-    <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-    <h1 class="font-bold text-3xl/tight text-balance mt-2xs">{{ title | safe }}</h1>
+      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-4 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
 
-    {# Audience #}
-    <div class="-ml-3xs mt-sm">
-      <span class="inline-block text-sm bg-gray-100 rounded-full px-xs py-3xs ">
-        {{ 'For ' if audience }}{{ audience | lower | safe }}
-      </span>
-    </div>
+      {# Audience #}
+      <div class="mt-6 -ml-1">
+        <span class="inline-block px-4 py-1 text-sm rounded-full bg-slate-200 ">
+          {{ 'For ' if audience }}{{ audience | lower | safe }}
+        </span>
+      </div>
 
-    {# Intro #}
-    <div class="text-lg mt-md text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      {# Intro #}
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="mt-lg">
+    <div class="mt-8">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid mt-2xs">
+      <ul class="grid mt-4">
         {% for chapter in collections.kapittel.slice(0,4) %}
-        <li class="relative grid items-center bg-gray-100 px-5 group hover:bg-gray-200 {{ 'rounded-t-xl pt-4' if loop.first else 'py-2' }} {{ 'rounded-b-xl pb-4' if loop.last else 'py-2' }}">
+        <li class="relative grid items-center bg-slate-100 px-5 group hover:bg-blue-50 {{ 'rounded-t-xl pt-4' if loop.first else 'py-3' }} {{ 'rounded-b-xl pb-4' if loop.last else 'py-3' }}">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
@@ -48,7 +47,7 @@ alpine: true
         {% endfor %}
 
         {% for chapter in collections.kapittel.slice(-1) %}
-        <li class="relative grid items-center px-5 py-4 mt-4 bg-gray-100 rounded-xl group hover:bg-gray-200">
+        <li class="relative grid items-center px-5 py-4 mt-4 bg-slate-100 rounded-xl group hover:bg-blue-50">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
@@ -62,79 +61,70 @@ alpine: true
     {% set chapters = collections.kapittel %}
 
     {% for chapter in chapters %}
-    {% set chapterindex = loop.index %}
-    <section class="grid items-end col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}">
-      <div class="grid grid-cols-mini lg:grid-cols-maxi col-full">
-        {# <div class="rounded-lg aspect-[2/1] mt-xl border border-gray-300 mb-sm"></div> #}
-        <div class="text-[360px]/[0.8] font-black text-gray-200 pt-2xl">{{ loop.index }}</div>
+      {% set chapterIndex = loop.index %}
+      <section class="grid items-end pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}">
+        <div class="grid grid-cols-mini lg:grid-cols-maxi col-full">
+          {# <div class="rounded-lg aspect-[2/1] border border-slate-300 mb-sm"></div> #}
+          <div class="text-[360px]/[0.8] -translate-x-2 font-black text-slate-200 pt-2xl">{{ loop.index }}</div>
 
-        {# <div class="text-sm tracking-widest uppercase">Kapittel {{ loop.index }}</div> #}
-        <h2 class="font-bold text-2xl/snug text-balance">{{ chapter.data.title }}</h2>
-        <p class="mt-sm">{{ chapter.data.description | safe }}</p>
+          {# <div class="text-sm tracking-widest uppercase">Kapittel {{ loop.index }}</div> #}
+          <h2 class="font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <p class="mt-6">{{ chapter.data.description | safe }}</p>
 
-        {# Static Chapter TOC #}
-        {% if chapter.templateContent %}
-        <nav class="bg-gray-100 rounded-lg my-md col-main toc-inline bottom-xl py-xs px-sm max-w-max">
-          <h3 class="font-semibold">I dette kapittelet</h3>
-          {{ chapter.templateContent | toc | safe }}
-        </nav>
-        {% endif %}
-      </div>
-
-      <div class="flex items-start justify-between col-wide gap-xs-2xl" x-data="{ tocShown: false, tocOpen: false }">
-
-        {# Main Content #}
-        <div class="prose mt-md lg:basis-3/5 max-w-prose shrink-1">
-          {{ chapter.templateContent | markdown | safe }}
+          {# Static Chapter TOC #}
+          {% if chapter.templateContent %}
+          <nav class="px-5 py-3 mt-8 rounded-lg bg-slate-200 col-main toc-inline bottom-xl max-w-max">
+            <h3 class="font-semibold">I dette kapittelet</h3>
+            {{ chapter.templateContent | toc | safe }}
+          </nav>
+          {% endif %}
         </div>
 
-        {# Sticky Chapter TOC #}
-        {% if chapter.templateContent %}
-        <div class="hidden lg:block sticky my-md toc-sticky top-6 min-h-[92vh] lg:basis-2/5 shrink-5" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
-          <nav class="sticky top-6" 
-            x-show="tocShown" 
-            x-transition:enter="transition ease-out duration-300"
-            x-transition:enter-start="opacity-0"
-            x-transition:enter-end="opacity-100"
-            x-transition:leave="transition ease-out duration-900 opacity-0"
-          >
-            <div class="relative">
-              <button class="grid w-full py-3 pl-4 pr-12 text-left border border-gray-200 rounded-t-lg hover:bg-gray-100" type="button" x-on:click="tocOpen = !tocOpen">
-                <span class="text-sm tracking-widest uppercase mb-3xs">Kapittel {{ loop.index }}</span>
-                <span class="font-bold text-lg/tight">{{ chapter.data.title | safe }}</span>
-                {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('absolute top-1/2 -translate-y-1/2 right-4 w-5 h-5') | safe }}
-              </button>
-              <div class="absolute z-10 hidden w-full bg-white rounded-b-lg shadow-lg top-full inset-x" x-bind:class="tocOpen && '!block'">
-                {% for chapter in chapters %}
-                  <a class="px-4 py-2.5 flex gap-2 items-baseline {{ '!bg-blue-600 text-white' if loop.index === chapterindex }} {{ 'hover:underline hover:bg-blue-50' if loop.index != chapterindex }}" href="#{{ chapter.data.title | slugify | safe }}">
-                    <span class="mr-4">{{ chapter.data.title }}</span>
-                    <span class="w-2.5 h-2.5 rounded-full ml-auto self-center {{ 'bg-white' if loop.index === chapterindex }}"></span>
-                  </a>
-                {% endfor %}
-              </div>
-            </div>
-            <div class="pt-2 pb-4 -mt-px border border-gray-200 roundex-b-lg">
-              {{ chapter.templateContent | toc | safe }}
-            </div>
+        <div class="flex items-start justify-between gap-x-24 col-wide" x-data="{ tocShown: false, tocOpen: false }">
+
+          {# Main Content #}
+          <div class="mt-8 prose lg:basis-3/5 max-w-prose shrink-1">
+            {{ chapter.templateContent | markdown | safe }}
           </div>
 
-          {# <div class="flex flex-wrap pt-3 mt-4 text-blue-600 border-t border-gray-200 gap-x-sm gap-y-3xs">
-            {% if loop.index < loop.length %}              
-            <a href="#{{ chapters[loop.index0 + 1].data.title | slugify | safe }}">Neste kapittel</a>
-            {% endif %}
-            {% if not loop.first %}       
-            <a href="#{{ chapters[loop.index0 - 1].data.title | slugify | safe }}">Forrige kapittel</a>
-            {% endif %}
-            <a href="#toppen">Til toppen</a>
-          </div> #}
-        </nav>
-        {% endif %}
+          {# Sticky Chapter TOC #}
+          {% if chapter.templateContent %}
+          <div class="hidden lg:block sticky lg:max-w-md my-8 toc-sticky top-6 min-h-[92vh] lg:basis-2/5 shrink-5" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
+            <nav class="sticky top-6" 
+              x-show="tocShown" 
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0"
+              x-transition:enter-end="opacity-100"
+              x-transition:leave="transition ease-out duration-900 opacity-0"
+            >
+              <div class="relative">
+                <button class="grid w-full py-3 pl-4 pr-12 text-left border rounded-t-lg border-slate-200 hover:bg-slate-200" type="button" x-on:click="tocOpen = !tocOpen">
+                  {# <span class="text-sm tracking-widest uppercase mb-3xs">Kapittel {{ loop.index }}</span> #}
+                  <span class="font-bold text-lg/tight">{{ chapter.data.title | safe }}</span>
+                  <span class="absolute -translate-y-1/2 top-1/2 right-4" x-bind:class="tocOpen && '-rotate-90'">{{ '/src/_includes/svg/icons/chevron-left.svg' | svgContents('w-5 h-5') | safe }}</span>
+                </button>
+                <div class="absolute z-10 hidden w-full bg-white rounded-b-lg shadow-lg top-full inset-x" x-bind:class="tocOpen && '!block'">
+                  {% for chapter in chapters %}
+                    <a class="px-4 py-2.5 flex gap-2 items-baseline {{ '!bg-blue-600 text-white' if loop.index === chapterIndex }} {{ 'hover:underline hover:bg-blue-50' if loop.index != chapterIndex }}" href="#{{ chapter.data.title | slugify | safe }}">
+                      <span class="mr-4">{{ chapter.data.title }}</span>
+                      <span class="w-2.5 h-2.5 rounded-full ml-auto self-center {{ 'bg-white' if loop.index === chapterIndex }}"></span>
+                    </a>
+                  {% endfor %}
+                </div>
+              </div>
+              <div class="pt-2 pb-4 -mt-px border border-slate-200 roundex-b-lg">
+                {{ chapter.templateContent | toc | safe }}
+              </div>
+            </div>
 
-      </div>
-    </section>
+          </nav>
+          {% endif %}
+
+        </div>
+      </section>
     {% endfor %}
 
-    <div class="text-sm italic border-t border-gray-200 col-wide mt-xl pt-2xs">{{ published | safe }}</div>
+    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
 
