--- a/src/pages/soknad-og-skjema/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/soknad-og-skjema/arbeidsgiver/arbeidsgiver.njk
@@ -93,7 +93,7 @@ permalink: false
                 <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
                   {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
                 </span>
-                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl py-2.5 pl-10 pr-3 bg-white border border-gray-300 rounded shadow-inner appearance-none focus:outline-none focus:ring focus:ring-blue-800">
+                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-16 py-2.5 pl-10 pr-3 bg-white border border-gray-300 rounded shadow-inner appearance-none focus:outline-none focus:ring focus:ring-blue-800">
               </div>
               <button
                 type="button"
