--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -6,21 +6,21 @@
         <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
         <span class="text-xl font-semibold">Isac Norland</span>
       </p>
-      <p class="border-t border-gray-200">
+      <p class="border-t border-slate-200">
         <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-500 -mx-clamp-gap px-clamp-gap sm:-mx-6 sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
           {{ '/src/_includes/svg/icons/user.svg' | svgContents() | safe }}
           <span>Min side</span>
         </a>
       </p>
     </div>
-    <div class="bg-gray-50 border-b relative border-gray-200 border-t max-h-[55dvh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
-      <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-gray-100 to-transparent mix-blend-multiply"></div>
+    <div class="bg-slate-100 border-b relative border-slate-200 border-t max-h-[55dvh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
+      <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-slate-100 to-transparent mix-blend-multiply"></div>
       <div class="p-6 py-4 px-clamp-gap">
         <h2 class="text-lg font-semibold">Varsler</h2>
         <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
         <div class="grid gap-1 mt-2">
           {%- for task in minSide.myTasks -%}
-            <a class="grid gap-1 px-3.5 py-3 bg-white rounded-lg fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+            <a class="grid gap-1 px-3.5 py-3 bg-white rounded-lg shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
               <h3 class="font-semibold leading-snug">{{ task.title | safe }}</h3>
               <p class="text-sm opacity-80">{{ task.timestamp }}</p>
               <div class="flex items-center justify-between mt-2">
@@ -29,7 +29,7 @@
                     {{ '/src/_includes/svg/icons/tasks-filled.svg' | svgContents('w-4 h-4') | safe }}
                   </span>
                   {%- for tag in task.tags -%}
-                    <span class="px-2 text-gray-700 leading-none py-1.5 text-sm rounded {{ tag.color or "bg-gray-100" }}">{{ tag.title | safe }}</span>
+                    <span class="px-2 text-slate-800 leading-none py-1 text-sm rounded {{ tag.color or "bg-slate-200" }}">{{ tag.title | safe }}</span>
                   {%- endfor -%}
                 </div>
                 {{ '/src/_includes/svg/icons/chevron-right.svg' | svgContents('opacity-50 w-5 h-5') | safe }}
@@ -41,7 +41,7 @@
         <h3 class="mt-6 text-sm tracking-wider uppercase opacity-80">Beskjeder</h3>
         <div class="grid gap-1 mt-2">
           {%- for message in minSide.myMessages -%}
-            <a class="px-3.5 py-3 bg-white rounded-md fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+            <a class="px-3.5 py-3 bg-white rounded-md shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
               <div>
                 <h3 class="font-semibold leading-snug">{{ message.title | safe }}</h3>
                 <p class="text-sm opacity-80">{{ message.timestamp }}</p>
@@ -53,7 +53,7 @@
                         {{ '/src/_includes/svg/icons/chat-filled.svg' | svgContents('w-4 h-4') | safe }}
                       </span>
                       {%- for tag in message.tags -%}
-                        <span class="px-2 text-gray-700 leading-none py-1.5 text-sm rounded {{ tag.color or "bg-gray-100" }}">{{ tag }}</span>
+                        <span class="px-2 text-slate-800 leading-none py-1 text-sm rounded {{ tag.color or "bg-slate-200" }}">{{ tag }}</span>
                       {%- endfor -%}
                     </div>
                   </div>
@@ -64,10 +64,10 @@
           {%- endfor -%}
         </div>
       </div>
-      <div class="sticky inset-x-0 bottom-0 h-3 bg-gradient-to-t from-gray-100 to-transparent mix-blend-multiply"></div>
+      <div class="sticky inset-x-0 bottom-0 h-3 bg-gradient-to-t from-slate-100 to-transparent mix-blend-multiply"></div>
     </div>
     <div class="grid">
-      <div x-show="!newNotifications" class="border-t border-gray-200 mx-clamp-gap sm:mx-6"></div>
+      <div x-show="!newNotifications" class="border-t border-slate-200 mx-clamp-gap sm:mx-6"></div>
       <button class="flex items-center gap-2 px-6 py-3 text-blue-500 rounded-b-lg px-clamp-gap fine:hover:bg-blue-500 fine:hover:text-white" x-on:click="loggedIn = false, notifyOpen = false">
         {{ '/src/_includes/svg/icons/logout.svg' | svgContents() | safe }}
         <span>Logg ut</span>
