--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,12 +1,12 @@
 {# Navigation (Private) #}
-<div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-mini lg:grid-cols-maxi top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
-  <div class="grid pt-4 pb-12 bg-white col-full grid-cols-mini lg:grid-cols-maxi">
-    <div class="grid gap-x-12 gap-y-12 col-wide md:grid-flow-col-dense md:grid-cols-5 md:grid-rows-[1fr_auto]">
+<div class="absolute inset-x-0 z-40 w-full h-0 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
+  <div class="pt-4 pb-12 bg-white px-edge">
+    <div class="grid gap-x-12 gap-y-12 mx-auto max-w-wide lg:grid-flow-col-dense lg:grid-cols-5 lg:grid-rows-[1fr_auto]">
 
       {# Områder #}
-      <div class="flex-1 row-start-1 md:pr-4 md:col-span-2 md:row-span-2">
+      <div class="flex-1 row-start-1 lg:pr-4 lg:col-span-2 lg:row-span-2">
         <h3 class="text-sm tracking-widest uppercase opacity-80">{{ menu.areas.title | safe }}</h3>
-        <ul class="grid gap-3 mt-2 sm:grid-cols-2 md:grid-cols-1">
+        <ul class="grid gap-3 mt-2 sm:grid-cols-2 lg:grid-cols-1">
           {%- for link in menu.areas.linkList -%}
             <li class="">
               <a class="inline-flex items-center gap-2 pr-4 leading-normal text-blue-500 rounded group fine:hover:text-deepblue-600 fine:hover:underline" href="#">
@@ -24,7 +24,7 @@
 
 
       {# Søk #}
-      <form class="w-full col-start-1 gap-2 md:max-w-2xl md:col-span-4 md:row-start-1 md:pr-20">
+      <form class="w-full col-start-1 gap-2 lg:max-w-2xl lg:col-span-4 lg:row-start-1 lg:pr-20">
         <label class="text-sm tracking-widest uppercase opacity-80" for="search">Søk</label>
         <div class="flex mt-2">
           <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
@@ -37,9 +37,9 @@
 
 
       {# Snarveier #}
-      <div class="flex flex-col md:row-start-2 md:col-span-3">
+      <div class="flex flex-col lg:row-start-2 lg:col-span-3">
         <h3 class="text-sm tracking-widest uppercase opacity-80">{{ menu.shortcuts.title | safe }}</h3>
-        <ul class="mt-1 xs:columns-2">
+        <ul class="mt-1 sm:columns-2">
           {%- for link in menu.shortcuts.linkList -%}
             <li class="py-0.5">
               <a class="inline-flex items-center gap-3 px-2 py-1 -mx-2 leading-normal text-blue-500 rounded fine:hover:text-blue-80 fine:hover:text-deepblue-500 fine:hover:underline" href="#">
