--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,7 +38,7 @@
     @apply text-lg/snug text-balance font-bold;
   }
   :where(.prose) :where(h3, h4) + *:not(h3, h4, ul, ol, details) {
-    @apply mt-2;
+    @apply mt-1.5;
   }
   :where(.prose) ul {
     @apply list-disc pl-6;
@@ -50,22 +50,25 @@
     @apply text-blue-600 underline;
   }
 
-  :where(.toc-inline, .toc-sticky) ol {
+  :where(.toc) ol {
     @apply mt-1 max-w-md grid gap-1;
   }
-  :where(.toc-sticky) li {
-    @apply border-l-4 border-transparent py-1 px-3 relative;
+  :where(.toc) li {
+    @apply py-1 relative;
   }
-  .toc-sticky .active {
-    @apply border-blue-600;
+  :where(.toc--sticky) li {
+    @apply border-l-4 border-transparent px-3;
   }
-  :where(.toc-inline, .toc-sticky li) a {
+  :where(.toc) .active {
+    @apply lg:border-blue-600;
+  }
+  :where(.toc) a {
     @apply underline hover:no-underline;
   }
-  .toc-sticky .active a {
-    @apply no-underline;
+  :where(.toc) .active a {
+    @apply lg:no-underline;
   }
-  .toc-sticky li a:before {
+  :where(.toc) a:before {
     content: "";
     position: absolute;
     inset: 0;
@@ -89,7 +92,7 @@
     appearance: none;
     display: block;
     list-style: none;
-    padding: 12px 40px;
+    padding: 10px 40px;
     margin-block: -1px;
     margin-inline: -40px -12px;
     border-radius: 4px;
@@ -110,7 +113,7 @@
     background-color: theme(colors.slate.200);
   }
   :where(.expander) summary:before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='#fff' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='#fff' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
     content: "";
@@ -122,8 +125,8 @@
     border-radius: 8px;
     background-color: theme(colors.blue.500);
     transition: rotate 150ms;
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
   }
   :where(.expander) summary:hover:before {
     background-color: theme(colors.blue.600);
@@ -175,20 +178,19 @@
 
 @layer utilities {
   .grid-cols-mini {
-    --_gutter: clamp(0.75rem, 0rem + 3.75vw, 6rem);
+    --_edge: clamp(0.75rem, -1.4286rem + 10.8929vw, 16rem);
     grid-template-columns: 
-      [full-start] var(--_gutter) minmax(0, 1fr) [wide-start main-start side-start] minmax(0, 42rem) [main-end side-end wide-end] minmax(0, 1fr) var(--_gutter) [full-end];
+      [full-start] var(--_edge) minmax(0, 1fr) [wide-start main-start side-start] minmax(0, 38rem) [main-end side-end wide-end] minmax(0, 1fr) var(--_edge) [full-end];
   }
 
-  /* 83.25 */
   .grid-cols-maxi {
-    --_gutter: clamp(0.75rem, 0rem + 3.75vw, 6rem);
+    --_edge: clamp(0.75rem, -1.4286rem + 10.8929vw, 16rem);
     grid-template-columns: 
-      [full-start] var(--_gutter) minmax(0, 1fr)  
-      [wide-start main-start] min(40rem, 100%) 
-      [main-end] min(13.25rem, 100%) 
-      [side-start] minmax(0, 30rem) 
-      [side-end wide-end] minmax(0, 1fr) var(--_gutter) [full-end];
+      [full-start] var(--_edge) minmax(0, 1fr)  
+      [wide-start main-start] min(38rem, 100%) 
+      [main-end] clamp(0.75rem, -1.3125rem + 10.3125vw, 9rem) 
+      [side-start] minmax(0, 23rem) 
+      [side-end wide-end] minmax(0, 1fr) var(--_edge) [full-end];
   }
   :where(.grid-cols-mini > *, .grid-cols-maxi > *) { grid-column: main }
 
