--- a/src/index.njk
+++ b/src/index.njk
@@ -6,8 +6,8 @@ noJS: true
 {%- extends 'blank.njk' -%}
 
 {%- block content -%}
-<div class="grid gap-3 text-xl p-sm-3xl">
-  {# <a class="bg-gray-200 rounded py-4 px-md aspect-video" href="forside/">Forside (personbruker)</a> #}
-  <a class="p-8 text-white bg-blue-500 hover:bg-blue-700 rounded-xl" href="produkt/">Produktsidemal</a>
-</div>
+  <div class="grid content-center w-full min-h-screen gap-4 place-items-center">
+    {# <a class="py-4 bg-gray-200 rounded px-md aspect-video" href="forside/">Forside (personbruker)</a> #}
+    <a class="px-6 py-4 rounded bg-slate-100 hover:bg-blue-500 hover:text-white" href="produkt/">Produktsidemal</a>
+  </div>
 {% endblock %}
