--- a/src/pages/produkt/produkt-a.njk
+++ b/src/pages/produkt/produkt-a.njk
@@ -1,8 +1,10 @@
 ---
+tags: ['produkt']
 title: 'Pleiepenger for sykt barn'
 // title: 'Tilskudd til kjøp av PC eller nettbrett ved lese- og skrivevansker'
 type: 'Pengestøtte'
 template: 'Produktside'
+variant: 'A'
 audience: 'Arbeidsgiver'
 intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare på et barn som har vært innlagt eller er til behandling på sykehus.'
 published: 'Oppdatert 18. desember 2023'
@@ -24,7 +26,7 @@ alpine: true
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-4 py-1 text-sm rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 pt-1.5 pb-1 text-sm leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
@@ -72,7 +74,7 @@ alpine: true
 
           {# Static Chapter TOC #}
           {% if chapter.templateContent %}
-          <nav class="px-5 py-3 mt-4 rounded-lg bg-slate-200 col-main toc-inline bottom-xl max-w-max">
+          <nav class="px-5 py-3 mt-4 rounded-lg bg-slate-200 col-main toc bottom-xl max-w-max">
             <h3 class="font-semibold">I dette kapittelet</h3>
             {{ chapter.templateContent | toc | safe }}
           </nav>
@@ -90,8 +92,8 @@ alpine: true
 
           {# Sticky Chapter TOC #}
           {% if chapter.templateContent %}
-          <div class="hidden lg:block sticky lg:max-w-md my-8 toc-sticky top-6 min-h-[92vh] lg:basis-2/5 shrink-5" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
-            <nav class="sticky top-6" 
+          <div class="hidden lg:block sticky lg:max-w-md my-8 toc toc--sticky top-6 min-h-[92vh] lg:basis-2/5 shrink-5" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
+            <nav class="sticky py-3 rounded-lg top-6 bg-slate-200" 
               x-show="tocShown" 
               x-transition:enter="transition ease-out duration-300"
               x-transition:enter-start="opacity-0"
@@ -99,28 +101,12 @@ alpine: true
               x-transition:leave="transition ease-out duration-900 opacity-0"
             >
               <div class="relative">
-                <button class="grid w-full py-3 pl-4 pr-12 text-left border rounded-t-lg border-slate-200 hover:bg-slate-200" type="button" x-on:click="tocOpen = !tocOpen">
-                  {# <span class="text-sm tracking-widest uppercase mb-3xs">Kapittel {{ loop.index }}</span> #}
-                  <span class="font-bold text-lg/tight">{{ chapter.data.title | safe }}</span>
-                  <span class="absolute -translate-y-1/2 top-1/2 right-4" x-bind:class="tocOpen && '-rotate-90'">{{ '/src/_includes/svg/icons/chevron-left.svg' | svgContents('w-5 h-5') | safe }}</span>
-                </button>
-                <div class="absolute z-10 hidden w-full bg-white rounded-b-lg shadow-lg top-full inset-x" x-bind:class="tocOpen && '!block'">
-                  {% for chapter in chapters %}
-                    <a class="px-4 py-2.5 flex gap-2 items-baseline {{ '!bg-blue-600 text-white' if loop.index === chapterIndex }} {{ 'hover:underline hover:bg-blue-50' if loop.index != chapterIndex }}" href="#{{ chapter.data.title | slugify | safe }}">
-                      <span class="mr-4">{{ chapter.data.title }}</span>
-                      <span class="w-2.5 h-2.5 rounded-full ml-auto self-center {{ 'bg-white' if loop.index === chapterIndex }}"></span>
-                    </a>
-                  {% endfor %}
-                </div>
-              </div>
-              <div class="pt-2 pb-4 -mt-px border border-slate-200 roundex-b-lg">
+                <h3 class="px-4 font-semibold">I dette kapittelet</h3>
                 {{ chapter.templateContent | toc | safe }}
               </div>
-            </div>
-
-          </nav>
+            </nav>
+          </div>
           {% endif %}
-
         </div>
       </section>
     {% endfor %}
@@ -135,13 +121,13 @@ alpine: true
     const headings = document.querySelectorAll('.prose h3');
     const headingsArr = Array.from(headings);
 
-    const navItems = document.querySelectorAll('.toc-sticky li');
+    const navItems = document.querySelectorAll('.toc--sticky li');
 
     function activateNavByIndex(index) {
       if (headings[index].classList.contains('active'))
         return;
 
-      const currentActive = document.querySelectorAll('.toc-sticky .active');
+      const currentActive = document.querySelectorAll('.toc--sticky .active');
       for (let i = currentActive.length - 1; i >= 0; i--) {
         currentActive[i].classList.remove('active');
       }
