--- a/src/pages/produkt/produkt-d.njk
+++ b/src/pages/produkt/produkt-d.njk
@@ -3,7 +3,7 @@ tags: ['produkt']
 title: 'Pleiepenger for sykt barn'
 // title: 'Tilskudd til kjøp av PC eller nettbrett ved lese- og skrivevansker'
 type: 'Pengestøtte'
-variant: 'B'
+variant: 'D'
 audience: 'Arbeidsgiver'
 intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare på et barn som har vært innlagt eller er til behandling på sykehus.'
 published: 'Oppdatert 18. desember 2023'
@@ -19,7 +19,7 @@ alpine: true
 {%- block content -%}
 
   <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
-    <div class="col-wide">
+    <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-2 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
 
@@ -35,20 +35,20 @@ alpine: true
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="mt-8">
+    <div class="mt-8 leading-normal col-wide">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid mt-2">
+      <ul class="grid gap-2 mt-2 sm:grid-cols-2 lg:grid-cols-4 sm:-mx-6 lg:mx-0">
         {% for chapter in collections.kapittel.slice(0,4) %}
-        <li class="relative grid items-center bg-slate-100 px-5 group hover:bg-blue-50 {{ 'rounded-t-xl pt-4 pb-2.5' if loop.first }} {{ 'rounded-b-xl pb-3 pt-2.5' if loop.last }} {{ 'py-2.5' if not (loop.first or loop.last) }}">
+        <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-[4/5] bg-slate-100 group hover:bg-blue-50">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
-          <p class="text-pretty">{{ chapter.data.description | safe }}</p>
+          <p class="text-base text-pretty">{{ chapter.data.description | safe }}</p>
         </li>
         {% endfor %}
 
         {% for chapter in collections.kapittel.slice(-1) %}
-        <li class="relative grid items-center px-5 py-3.5 mt-2.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
+        <li class="relative grid sm:col-span-2 lg:col-span-4 items-center px-5 mt-2 py-3.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
@@ -60,34 +60,64 @@ alpine: true
 
     {# Innhold #}
     {% set chapters = collections.kapittel %}
+    <div class="grid pt-24 col-full grid-cols-mini lg:grid-cols-maxi" x-data="{ showChapter1: false, showChapter2: false, showChapter3: false, showChapter4: false, showChapter5: false }">
+      <div class="col-main">
+        {% for chapter in chapters %}
+        {% set chapterIndex = loop.index %}
 
-    {% for chapter in chapters %}
-      {% set chapterIndex = loop.index %}
-      <section class="grid items-start pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
-        <div class="col-wide">
-          <div class="text-[360px]/[0.8] -translate-x-2 font-black text-slate-200 pt-2xl">{{ loop.index }}</div>
-          <h2 class="font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
-        </div>
+        <section 
+          id="{{ chapter.data.title | slugify }}"
+          class="mt-24" 
+          x-intersect:enter.margin.-600px.0px.-900px.0px="showChapter{{ chapterIndex }} = true"
+          x-intersect:leave.margin.-400px.0px.-600px.0px="showChapter{{ chapterIndex }} = false" 
+        >
+          <div class="grid items-end px-3 bg-slate-100 aspect-[3/1] rounded-xl sm:-mx-6 lg:mx-0">
+            <span class="text-[360px]/[0.8] inline-block translate-y-8 font-black text-white">
+              {{ chapterIndex }}
+            </span>
+          </div>
 
-        {# Chapter TOC #}
+          <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+
+          {# Chapter TOC #}
+          {% if chapter.templateContent %}
+          <nav class="px-4 py-4 mt-4 rounded-lg lg:hidden toc bg-slate-100">
+            <h3 class="font-semibold">
+              I dette kapittelet
+              <span class="hidden lg:inline">({{ chapterIndex }})</span>
+            </h3>
+            {{ chapter.templateContent | toc | safe }}
+          </nav>
+          {% endif %}
+
+          {# Main Content #}
+          <div class="mt-8 prose col-main">
+            <p>{{ chapter.data.description | safe }}</p>
+            {{ chapter.templateContent | markdown | safe }}
+          </div>
+        </section>
+        {% endfor %}
+      </div>
+
+      {# Chapter TOC #}
+      <nav class="hidden col-side lg:block">
+        <div class="toc toc--d toc--sticky lg:mt-[500px] lg:sticky lg:-translate-y-4 lg:top-8">
+        {% for chapter in chapters %}
+        <h3 class="py-1 font-semibold">
+          <a href="#{{ chapter.data.title | slugify }}">{{ chapter.data.title }}</a>
+          <span class="hidden lg:inline">({{ loop.index }})</span>
+        </h3>
+          
         {% if chapter.templateContent %}
-        <nav class="py-4 mt-4 rounded-lg lg:mt-8 lg:sticky lg:order-1 bg-slate-100 toc toc--sticky lg:col-side lg:top-6">
-          <h3 class="px-4 font-semibold">
-            I dette kapittelet
-            <span class="hidden lg:inline">({{ chapterIndex }})</span>
-          </h3>
+        <div class="pl-3 mb-3 border-l border-slate-300" x-show="showChapter{{ loop.index }}">
           {{ chapter.templateContent | toc | safe }}
-        </nav>
-        {% endif %}
-
-        {# Main Content #}
-        <div class="mt-8 prose col-main">
-          <p>{{ chapter.data.description | safe }}</p>
-
-          {{ chapter.templateContent | markdown | safe }}
         </div>
-      </section>
-    {% endfor %}
+        {% endif %}
+        {% endfor %}
+        </div>
+      </nav>
+
+    </div>
 
     <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
@@ -123,7 +153,7 @@ alpine: true
 
     const intersectionOptions = {
       threshold: 1,
-      rootMargin: '0px 0px 0px 0px'
+      rootMargin: '5% 0px -60% 0px'
     };
 
     const intersectionObserver = new IntersectionObserver(intersectionCallback, intersectionOptions);
